# pycrossword

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: README.md  installation.md  usage.md
pycrossword/: __init__.py  __main__.py  __version__.py  _utils.py  logger.py
pycrossword/clue/: __init__.py  clue.py
pycrossword/crossword/: __init__.py  generator.py  utils.py
pycrossword/crossword/_v2/: __init__.py  generator.py
pycrossword/word/: __init__.py  word.py
tests/: test_generate_crossword.py
tests/unit/: conftest.py  test_generate_clues.py  test_generate_crossword.py  test_generate_score.py  test_prepare_words.py  test_remove_duplicates.py
tests/words/: word-master-set.txt  word-set-1.txt  word-set-10-1.txt  word-set-10-2.txt  word-set-10-3.txt  word-set-17-1.txt  word-set-17-2.txt  word-set-17-3.txt  word-set-24-1.txt  word-set-24-2.txt  word-set-24-3.txt  word-set-31-1.txt  word-set-31-2.txt  word-set-31-3.txt  word-set-38-1.txt  word-set-38-2.txt  word-set-38-3.txt  word-set-45-1.txt  word-set-45-2.txt  word-set-45-3.txt  word-set-52-1.txt  word-set-52-2.txt  word-set-52-3.txt  word-set-59-1.txt  word-set-59-2.txt  word-set-59-3.txt  word-set-66-1.txt  word-set-66-2.txt  word-set-66-3.txt  word-set-73-1.txt  word-set-73-2.txt  word-set-73-3.txt  word-set-80-1.txt  word-set-80-2.txt  word-set-80-3.txt  word-set-87-1.txt  word-set-87-2.txt  word-set-87-3.txt  word-set-94-1.txt  word-set-94-2.txt  (+2 more)
