[project]
name = "pycrossword-generator"
dynamic = ["version"]
description = "A Python library and CLI tool for generating customizable crossword puzzles."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["crossword", "generator", "puzzle"]
authors = [
    { name = "Vladyslav Novotnyi", email = "psejjkuczo@proxiedmail.com" }
]
maintainers = [
    { name = "Vladyslav Novotnyi", email = "psejjkuczo@proxiedmail.com" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
    "openai>=1.25.0"
]

#   $ pip install pycrossword-generator[dev]
[project.optional-dependencies]
# development dependency group
dev = [
    "build"
]
# test dependency group
test = [
    "coverage",
    "pytest",
    "pytest-cov",
]
# lint dependency group
lint = [
    "black==24.8.0",
    "isort==5.13.2",
]

[project.urls]
"Homepage" = "https://github.com/fabelx/pycrossword"
"Bug Reports" = "https://github.com/fabelx/pycrossword/issues"
"Source" = "https://github.com/fabelx/pycrossword"

[project.scripts]
pycrossword = "pycrossword.__main__:main"

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "pycrossword.__version__" }

# omit all files that starts with an underscore
[tool.coverage.run]
omit = [
    "*/_*"
]

[tool.coverage.report]
skip_empty = true
show_missing = true